test/e2e/artifacts/components/istio-control-plane/policies.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app: istiod
    app.kubernetes.io/instance: istio
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istiod
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.28.0
    helm.sh/chart: istiod-1.27.1
    install.operator.istio.io/owning-resource: unknown
    istio: pilot
    istio.io/rev: llm-d-gateway
    operator.istio.io/component: Pilot
    release: istio
  name: istiod-llm-d-gateway
  namespace: llm-d-istio-system
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: istiod
      istio.io/rev: llm-d-gateway
