test/e2e/artifacts/components/istio-control-plane/service-accounts.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: istio-reader-service-account
  namespace: llm-d-istio-system
  labels:
    app: istio-reader
    release: istio
    app.kubernetes.io/name: "istio-reader"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istio-base"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.29.2"
    helm.sh/chart: base-1.29.2
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: istiod-llm-d-gateway
  namespace: llm-d-istio-system
  labels:
    app: istiod
    release: istio
    app.kubernetes.io/name: "istiod"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istiod"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.29.2"
    helm.sh/chart: istiod-1.29.2
