test/e2e/artifacts/components/istio-control-plane/telemetry.yaml
# Enables debug logging for Gateways
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: mesh-default
  namespace: istio-gateway
spec:
  accessLogging:
  - providers:
    - name: envoy
